@@ -159,6 +159,12 @@ save the exported file.</td>
 <td>PasswordSafe no longer ends if the command flag is set to "-s &lt;databasename&gt;".</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3088187);return false;">3088187</a><br></td>
+<td>Correct entry in List View is now used for Autotype when using the keyboard
+to select the entry when PasswordSafe first opens.
+</td>
+</tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>Controls in Edit are now disabled if entry is protected, even though the user could
 not have saved any changes.</td>
